Make sure we hide any overflowed nav controls

--- a/files/app/resource/css/mobile.css
+++ b/files/app/resource/css/mobile.css
@@ -48,6 +48,7 @@ body.mobile hr
     height: 80px;
     min-height: 80px;
     background-color: var(--nav-bg-color);
+    overflow: hidden;
     transition: height 0.4s, min-height 0.4s;
 }
 body.hide-bars #m-title
